--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,6 +7,7 @@ before:
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
+  - ldflags: "-X 'main.version={{.Version}}'"
   - env:
       - CGO_ENABLED=0
     goos:
